Tue Jul 31 15:34:57 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_remove_column): Whoops.  Stupid
	scoping error pointed out by matthiasc@poet.de.

2001-07-31  Sven Neumann  <sven@gimp.org>

	* demos/gtk-demo/appwindow.c
	* demos/gtk-demo/item_factory.c
	* tests/testgtk.c: gtk_accel_group_attach() takes a GObject.

Mon Jul 30 10:49:16 PDT 2001 Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>
	* gtk/gtksignal.h (gtk_signal_handler_pending): corrected the wrong
	argument order for g_signal_has_handler_pending.

Sun Jul 29 17:14:01 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkitemfactory.c (gtk_item_factory_parse_rc): use g_file_test()
	instead of long deprecated g_scanner_stat_mode().

2001-07-29  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc : build in the backend dir after
	auto-generating files

	* gdk/win32/gdkfont-win32.c (gdk_font_load) : reimplement
	with code from win32-production-branch.

	*  gdk/win32/gdkwindow-win32.c : set the private->destroyed flag
	before calling DestroyWindow, which indirectly calls 
	gdk_window_destroy_notify ()

	(performance patch merged from win32-production-branch)
	* gdk/win32/gdkdrawable-win32.c (gdk_win32_draw_segments): 
	Use PatBlt() instead of LineTo() when possible (solid single-pixel pen, 
	R2_COPYPEN rop). It is claimed to be much faster.

Fri Jul 27 11:31:15 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_get_property):
	add an "attributes" property to the text renderer for ATK.

2001-07-26  Alex Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkimage-fb.c (_gdk_fb_get_image):
	Initialize image->bits_per_pixel from the drawable, not from
	the root window.

	* gdk/linux-fb/gdkdrawable-fb2.c (gdk_fb_get_depth):
	Fix cast. argument is an IMPL already.

2001-07-15  James Henstridge  <james@daa.com.au>

	* gtk/gtkwindow.c (gtk_window_add_accel_group): cast to GObject.
	(gtk_window_remove_accel_group): same here.